@@ -40,6 +40,8 @@ lib/SPVM/Net/SSLeay/BIO.pm
 lib/SPVM/Net/SSLeay/BIO.spvm
 lib/SPVM/Net/SSLeay/Callback/PemPasswd.pm
 lib/SPVM/Net/SSLeay/Callback/PemPasswd.spvm
+lib/SPVM/Net/SSLeay/Callback/PskClient.pm
+lib/SPVM/Net/SSLeay/Callback/PskClient.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextStatus.pm
