@@ -19,6 +19,7 @@
     * Add Net::SSLeay::SSL_CTX#set_tlsext_servername_callback method.
     * Add Net::SSLeay::SSL_CTX#set_tlsext_status_cb method.
     * Add Net::SSLeay::SSL_CTX#set_default_passwd_cb method.
+    * Add Net::SSLeay::Callback::PskClient class.
     
 0.013 2024-11-14
   [New Features]
